cmake_minimum_required(VERSION 2.8.3)
project(RtmProject)

message(STATUS ${PLATFORM})

set(PROJECT_ROOT_PATH ${RtmProject_SOURCE_DIR}/../)
set(EXECUTABLE_OUTPUT_PATH ${RtmProject_SOURCE_DIR}/../install/bin)
set(LIBRARY_OUTPUT_PATH ${RtmProject_SOURCE_DIR}/../install/lib)
set(CONFIG_FILE_OUTPUT_PATH ${RtmProject_SOURCE_DIR}/../install/runtime)

set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -g -O0 -D PB_FIELD_32BIT")
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -Wall -g -O0 -Wno-unused-but-set-variable -Wno-unused-local-typedefs -fpermissive -lrt -DPB_FIELD_32BIT -DSIMMULATION -DPRINT")

add_subdirectory(pb)
add_subdirectory(protos)
add_subdirectory(xml_help)
add_subdirectory(yaml_help)
add_subdirectory(thread_help)
add_subdirectory(basic_alg)
add_subdirectory(log_manager)
add_subdirectory(error_queue)
add_subdirectory(tp_comm) 
add_subdirectory(file_manager)
add_subdirectory(system_model_manager)
add_subdirectory(algorithm_base)
add_subdirectory(axis)
add_subdirectory(axis1000)
add_subdirectory(group)
add_subdirectory(core_comm)
add_subdirectory(servo_comm)
#add_subdirectory(virtual_servo_device_1000)
add_subdirectory(test)
add_subdirectory(base_device)
add_subdirectory(io_1000)
add_subdirectory(rtm_spi)
add_subdirectory(nvram)
add_subdirectory(reg_manager)
add_subdirectory(joint_constraint)
add_subdirectory(kinematics_alg)
add_subdirectory(dynamic_alg)
add_subdirectory(transformation)
add_subdirectory(coordinate_manager)
add_subdirectory(tool_manager)
add_subdirectory(trajectory_planner)
add_subdirectory(motion_control)
add_subdirectory(controller)